--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "aurelia-froala-editor": "^2.6.0",
     "aurelia-i18n": "^1.6.1",
     "bluebird": "^3.4.1",
-    "font-awesome": "^4.7.0",
+    "bootstrap-sass": "^3.3.7",
     "i18next": "^8.4.0",
     "i18next-xhr-backend": "^1.4.1",
     "jquery": "^3.2.1",
