--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aurelia-fetch-client": "^1.1.2",
     "aurelia-froala-editor": "^2.6.0",
     "aurelia-i18n": "^1.6.1",
+    "aurelia-interactjs": "^2.0.7",
     "aurelia-validation": "^1.0.0",
     "bluebird": "^3.4.1",
     "bootstrap-sass": "^3.3.7",
