--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aurelia-i18n": "^1.6.1",
     "aurelia-interactjs": "^2.0.7",
     "aurelia-validation": "^1.0.0",
+    "aurelia-websocket": "^0.3.1",
     "bluebird": "^3.4.1",
     "bootstrap-sass": "^3.3.7",
     "i18next": "^8.4.0",
