--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "requirejs": "^2.3.2",
     "tether": "^1.4.0",
     "text": "github:requirejs/text#latest",
+    "typescript-collections": "^1.2.3",
     "velocity-animate": "^1.5.0"
   },
   "peerDependencies": {},
