--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aurelia-websocket": "^0.3.1",
     "bluebird": "^3.4.1",
     "bootstrap-sass": "^3.3.7",
+    "downloadjs": "^1.4.7",
     "i18next": "^8.4.0",
     "i18next-xhr-backend": "^1.4.1",
     "jquery": "^3.2.1",
