--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aurelia-animator-css": "^1.0.1",
     "aurelia-bootstrap": "^0.1.20",
     "aurelia-bootstrapper": "^2.1.0",
+    "aurelia-cli": "^0.27.0",
     "aurelia-dialog": "^1.0.0-rc.1.0.3",
     "aurelia-fetch-client": "^1.1.2",
     "aurelia-froala-editor": "^2.6.0",
