--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aurelia-websocket": "^0.3.1",
     "bluebird": "^3.4.1",
     "bootstrap-sass": "^3.3.7",
+    "calculate-pixel-size": "^1.0.0",
     "downloadjs": "^1.4.7",
     "i18next": "^8.4.0",
     "i18next-xhr-backend": "^1.4.1",
