--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "au-table": "^0.1.13",
     "aurelia-animator-css": "^1.0.1",
     "aurelia-bootstrap": "^0.1.20",
     "aurelia-bootstrapper": "^2.1.0",
