--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "tether": "^1.4.0",
     "text": "github:requirejs/text#latest",
     "typescript-collections": "^1.2.3",
-    "velocity-animate": "^1.5.0"
+    "velocity-animate": "^1.5.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "peerDependencies": {},
   "devDependencies": {
