--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "downloadjs": "^1.4.7",
     "i18next": "^8.4.0",
     "i18next-xhr-backend": "^1.4.1",
+    "interactjs": "^1.3.3",
     "jquery": "^3.2.1",
     "requirejs": "^2.3.2",
     "tether": "^1.4.0",
