--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next-xhr-backend": "^1.4.1",
     "interactjs": "^1.3.3",
     "jquery": "^3.2.1",
+    "languagedetect": "^1.1.1",
     "requirejs": "^2.3.2",
     "tether": "^1.4.0",
     "text": "github:requirejs/text#latest",
