--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "aurelia-froala-editor": "^2.6.0",
     "aurelia-i18n": "^1.6.1",
     "aurelia-interactjs": "^2.0.7",
+    "aurelia-mobile-plugin": "0.0.5",
     "aurelia-validation": "^1.1.1",
     "aurelia-websocket": "^0.3.1",
     "bluebird": "^3.4.1",
     "bootstrap-sass": "^3.3.7",
     "calculate-pixel-size": "^1.0.0",
     "downloadjs": "^1.4.7",
+    "hammerjs": "^2.0.8",
     "i18next": "^8.4.0",
     "i18next-xhr-backend": "^1.4.1",
     "interactjs": "^1.3.3",
