--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aurelia-i18n": "^1.6.1",
     "aurelia-interactjs": "^2.0.7",
     "aurelia-mobile-plugin": "0.0.5",
+    "aurelia-toastr": "0.0.5",
     "aurelia-validation": "^1.1.1",
     "aurelia-websocket": "^0.3.1",
     "bluebird": "^3.4.1",
