start using grid. minor cosmetics.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aurelia-froala-editor": "^2.7.6",
     "aurelia-i18n": "^1.6.1",
     "aurelia-interactjs": "^2.0.7",
+    "aurelia-slickgrid": "^1.11.1",
     "aurelia-toastr": "0.0.5",
     "aurelia-validation": "^1.1.1",
     "aurelia-websocket": "^0.3.1",
@@ -28,6 +29,7 @@
     "interactjs": "^1.3.3",
     "jquery": "^3.3.1",
     "requirejs": "^2.3.2",
+    "slickgrid": "^2.3.17",
     "tether": "^1.4.0",
     "text": "github:requirejs/text#latest",
     "typescript-collections": "^1.2.3",
