--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next": "^8.4.0",
     "i18next-xhr-backend": "^1.4.1",
     "interactjs": "^1.3.3",
+    "iscroll": "^5.2.0",
     "jquery": "^3.3.1",
     "requirejs": "^2.3.2",
     "slickgrid": "^2.3.17",
