--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "interactjs": "^1.3.3",
     "iscroll": "^5.2.0",
     "jquery": "^3.3.1",
+    "json.human": "0.0.1",
     "requirejs": "^2.3.2",
     "slickgrid": "^2.3.17",
     "tether": "^1.4.0",
