--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "aurelia-dialog": "^1.0.0-rc.1.0.3",
     "aurelia-fetch-client": "^1.1.2",
     "aurelia-froala-editor": "^2.8.1",
+    "aurelia-history-browser": "^1.1.1",
     "aurelia-i18n": "^1.6.1",
     "aurelia-interactjs": "^2.0.7",
+    "aurelia-loader-default": "^1.0.4",
+    "aurelia-pal-browser": "^1.8.0",
+    "aurelia-templating-binding": "^1.4.1",
+    "aurelia-templating-router": "^1.3.1",
     "aurelia-toastr": "0.0.5",
     "aurelia-validation": "^1.1.1",
     "aurelia-websocket": "^0.3.1",
