--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "iscroll": "^5.2.0",
     "jquery": "^3.3.1",
     "json.human": "0.0.1",
+    "lodash": "^4.17.10",
     "requirejs": "^2.3.2",
     "tether": "^1.4.0",
     "text": "github:requirejs/text#latest",
