--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "browser-sync": "^2.26.3",
     "connect-history-api-fallback": "^1.2.0",
     "event-stream": "^3.3.3",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "github:gulpjs/gulp",
     "gulp-changed-in-place": "^2.0.3",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
