--- a/package.json
+++ b/package.json
@@ -21,18 +21,16 @@
     "aurelia-websocket": "^0.3.1",
     "bluebird": "^3.4.1",
     "bootstrap-sass": "^3.4.1",
-    "braces": "^3.0.2",
     "calculate-pixel-size": "^1.0.0",
-    "deepmerge": "^3.2.0",
     "downloadjs": "^1.4.7",
     "froala-editor": "^2.8.1",
     "i18next": "^8.4.0",
     "i18next-xhr-backend": "^1.4.1",
     "interactjs": "^1.3.3",
     "iscroll": "^5.2.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.3.1",
     "json.human": "0.0.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.10",
     "requirejs": "^2.3.2",
     "tether": "^1.4.0",
     "text": "github:requirejs/text#latest",
@@ -47,12 +45,12 @@
     "aurelia-cli": "^0.35.1",
     "aurelia-testing": "^1.0.0-beta.2.0.1",
     "aurelia-tools": "^1.0.0",
-    "browser-sync": "^2.26.5",
+    "browser-sync": "^2.26.3",
     "connect-history-api-fallback": "^1.2.0",
     "event-stream": "^3.3.3",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "github:gulpjs/gulp",
     "gulp-changed-in-place": "^2.0.3",
-    "gulp-notify": "^3.2.0",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
@@ -60,7 +58,7 @@
     "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^3.1.4",
     "jasmine-core": "^2.4.1",
-    "karma": "^4.1.0",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-typescript-preprocessor": "^0.2.1",
@@ -69,6 +67,6 @@
     "tslint": "^3.11.0",
     "typescript": ">=1.9.0-dev || ^2.0.0",
     "uglify-js": "^2.6.3",
-    "vinyl-fs": "^3.0.3"
+    "vinyl-fs": "^2.4.3"
   }
 }
