--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "aurelia-froala-editor": "^2.8.1",
     "aurelia-google-analytics": "^2.4.0",
     "aurelia-google-maps": "^2.3.0",
+    "aurelia-google-places": "^1.0.6",
     "aurelia-i18n": "^1.6.1",
     "aurelia-interactjs": "^2.0.7",
+    "aurelia-plugins-google-places-autocomplete": "^2.6.1",
     "aurelia-toastr": "0.0.5",
     "aurelia-validation": "^1.1.1",
     "aurelia-websocket": "^0.3.1",
@@ -33,6 +35,7 @@
     "jquery": "^3.5.1",
     "json.human": "0.0.1",
     "lodash": "^4.17.19",
+    "regenerator-runtime": "^0.13.7",
     "requirejs": "^2.3.2",
     "tether": "^1.4.0",
     "text": "github:requirejs/text#latest",
