--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.2.2",
-    "gulp-dart-sass": "^1.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^3.1.4",
