--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "url": "???"
     },
     "scripts": {
-        "dev": "au run"
+        "dev": "au run",
+        "build": "au build",
+        "gbs": "au run --env gbstories --watch",
+        "geva": "au run --env geva --watch"
     },
     "license": "MIT",
     "dependencies": {
