feat(app): aurelia 2 migration work in progress
Working on migrating over specific parts to v2

--- a/package.json
+++ b/package.json
@@ -1,83 +1,92 @@
 {
   "name": "gbs",
-  "description": "An Aurelia client application.",
+  "description": "An Aurelia 2 client application.",
   "version": "0.1.0",
   "repository": {
-    "type": "???",
+    "type": "git",
     "url": "???"
   },
-  "scripts": {
-    "dev": "au run",
-    "build": "au build",
-    "gbs": "au run --env gbstories --watch",
-    "geva": "au run --env geva --watch"
-  },
-  "license": "MIT",
+  "license": "UNLICENSED",
   "dependencies": {
-    "au-table": "^0.1.14",
-    "aurelia-bootstrap": "^0.1.20",
-    "aurelia-bootstrapper": "^2.1.0",
-    "aurelia-dialog": "^1.0.0-rc.1.0.3",
-    "aurelia-fetch-client": "^1.1.2",
-    "aurelia-froala-editor": "^2.8.1",
-    "aurelia-google-analytics": "^2.4.0",
-    "aurelia-google-maps": "^2.3.0",
-    "aurelia-google-places": "^1.0.6",
-    "aurelia-i18n": "^1.6.1",
-    "aurelia-interactjs": "^2.0.7",
-    "aurelia-plugins-google-places-autocomplete": "^2.6.1",
-    "aurelia-toastr": "0.0.5",
-    "aurelia-validation": "^1.1.1",
-    "aurelia-websocket": "^0.3.1",
-    "bluebird": "^3.4.1",
+    "@aurelia/i18n": "latest",
+    "aurelia": "latest",
+    "aurelia2-google-maps": "^0.0.17",
+    "aurelia2-table": "^0.0.13",
     "bootstrap-sass": "^3.4.1",
     "calculate-pixel-size": "^1.0.0",
     "downloadjs": "^1.4.7",
     "froala-editor": "^2.8.1",
-    "i18next": "^8.4.0",
-    "i18next-xhr-backend": "^1.4.1",
+    "i18next-fetch-backend": "^5.0.1",
     "interactjs": "^1.7.0",
     "iscroll": "^5.2.0",
     "jquery": "^3.5.1",
     "json.human": "0.0.1",
     "lodash": "^4.17.21",
-    "regenerator-runtime": "^0.13.7",
-    "requirejs": "^2.3.2",
     "tether": "^1.4.0",
-    "text": "github:requirejs/text#latest",
     "typescript-collections": "^1.2.3",
-    "velocity-animate": "^1.5.0",
-    "whatwg-fetch": "^2.0.3",
-    "yarn": "^1.22.19"
+    "velocity-animate": "^1.5.0"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.2.0",
-    "@types/node": "^6.0.45",
-    "aurelia-cli": "^0.35.1",
-    "aurelia-testing": "^1.0.0-beta.2.0.1",
-    "aurelia-tools": "^1.0.0",
-    "browser-sync": "^2.26.14",
-    "connect-history-api-fallback": "^1.2.0",
-    "event-stream": "^3.3.3",
-    "gulp": "github:gulpjs/gulp",
-    "gulp-changed-in-place": "^2.0.3",
-    "gulp-dart-sass": "^1.0.2",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-tslint": "^5.0.0",
-    "gulp-typescript": "^3.1.4",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-typescript-preprocessor": "^0.2.1",
-    "minimatch": "^3.0.2",
-    "through2": "^2.0.1",
-    "tslint": "^3.11.0",
-    "typescript": ">=1.9.0-dev || ^2.0.0",
-    "uglify-js": "^2.6.3",
-    "vinyl-fs": "^2.4.3"
+    "@aurelia/testing": "latest",
+    "@aurelia/ts-jest": "latest",
+    "@aurelia/webpack-loader": "latest",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.41",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "autoprefixer": "^10.4.7",
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^7.1.0",
+    "eslint": "^8.17.0",
+    "html-webpack-plugin": "^5.5.0",
+    "htmlhint": "^1.1.4",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-transform-stub": "^2.0.0",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "rimraf": "^3.0.2",
+    "sass": "^1.52.2",
+    "sass-lint": "^1.13.1",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.2"
+  },
+  "scripts": {
+    "lint:js": "eslint src test --ext .js,.ts",
+    "lint:css": "sass-lint -c .sass-lint.yml \"src/**/*.scss\"",
+    "lint:html": "htmlhint -c .htmlhintrc src",
+    "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
+    "pretest": "npm run lint",
+    "start": "webpack serve",
+    "build": "rimraf dist && webpack --env production",
+    "analyze": "rimraf dist && webpack --env production --analyze",
+    "test": "jest"
+  },
+  "jest": {
+    "testMatch": [
+      "<rootDir>/test/**/*.spec.ts"
+    ],
+    "testEnvironment": "jsdom",
+    "transform": {
+      "\\.(css|less|sass|scss|styl|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "jest-transform-stub",
+      "\\.(ts|html)$": "@aurelia/ts-jest"
+    },
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/**/*.d.ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "isolatedModules": true
+      }
+    }
   }
 }
