--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "json.human": "0.0.1",
     "lodash": "^4.17.21",
     "tether": "^1.4.0",
+    "toastr": "^2.1.4",
     "typescript-collections": "^1.2.3",
     "velocity-animate": "^1.5.0"
   },
