--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,9 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
+  "rules": {
+    "@typescript-eslint/ban-ts-comment": "off"
+  },
   "parserOptions": {
     "ecmaVersion": 2019,
     "sourceType": "module"
