--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
-    "@aurelia/i18n": "latest",
-    "aurelia": "latest",
+    "@aurelia/i18n": "^2.0.0-beta.1",
+    "aurelia": "^2.0.0-beta.1",
     "aurelia2-froala-editor": "^1.0.0",
     "aurelia2-google-analytics": "^1.0.1",
     "aurelia2-google-maps": "^0.0.17",
@@ -31,36 +31,36 @@
     "velocity-animate": "^1.5.0"
   },
   "devDependencies": {
-    "@aurelia/testing": "latest",
-    "@aurelia/ts-jest": "latest",
-    "@aurelia/webpack-loader": "latest",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.41",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "autoprefixer": "^10.4.7",
-    "css-loader": "^6.7.1",
-    "dotenv-webpack": "^7.1.0",
-    "eslint": "^8.17.0",
+    "@aurelia/testing": "^2.0.0-beta.1",
+    "@aurelia/ts-jest": "^2.0.0-beta.1",
+    "@aurelia/webpack-loader": "^2.0.0-beta.1",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "autoprefixer": "^10.4.13",
+    "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
+    "eslint": "^8.32.0",
     "html-webpack-plugin": "^5.5.0",
     "htmlhint": "^1.1.4",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "jest-transform-stub": "^2.0.0",
-    "postcss": "^8.4.14",
-    "postcss-loader": "^7.0.0",
-    "rimraf": "^3.0.2",
-    "sass": "^1.52.2",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "rimraf": "^4.0.7",
+    "sass": "^1.57.1",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^13.0.0",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.0",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.3",
-    "webpack": "^5.73.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.2"
+    "ts-loader": "^9.4.2",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
     "lint:js": "eslint src test --ext .js,.ts",
