feat(app): updating to latest aurelia version

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
-    "@aurelia/dialog": "^2.0.0-beta.1",
-    "@aurelia/i18n": "^2.0.0-beta.1",
-    "aurelia": "^2.0.0-beta.1",
+    "@aurelia/dialog": "^2.0.0-beta.3",
+    "@aurelia/i18n": "^2.0.0-beta.3",
+    "@aurelia/router": "^2.0.0-beta.3",
+    "@aurelia/validation": "^2.0.0-beta.3",
+    "aurelia": "^2.0.0-beta.3",
     "aurelia2-froala-editor": "^1.0.0",
     "aurelia2-google-analytics": "^1.0.1",
     "aurelia2-google-maps": "^0.0.17",
@@ -32,9 +34,9 @@
     "velocity-animate": "^1.5.0"
   },
   "devDependencies": {
-    "@aurelia/testing": "^2.0.0-beta.1",
-    "@aurelia/ts-jest": "^2.0.0-beta.1",
-    "@aurelia/webpack-loader": "^2.0.0-beta.1",
+    "@aurelia/testing": "^2.0.0-beta.3",
+    "@aurelia/ts-jest": "^2.0.0-beta.3",
+    "@aurelia/webpack-loader": "^2.0.0-beta.3",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
@@ -45,7 +47,7 @@
     "eslint": "^8.32.0",
     "html-webpack-plugin": "^5.5.0",
     "htmlhint": "^1.1.4",
-    "jest": "^29.3.1",
+    "jest": "^28.0.0",
     "jest-environment-jsdom": "^29.3.1",
     "jest-transform-stub": "^2.0.0",
     "postcss": "^8.4.21",
